--- a/app/package.json
+++ b/app/package.json
@@ -14,6 +14,8 @@
     "less": "^4.1.2",
     "less-loader": "^6.1.2",
     "nprogress": "^0.2.0",
+    "sass": "^1.49.0",
+    "sass-loader": "^9.0.3",
     "spark-md5": "^3.0.2",
     "vue": "^2.6.11",
     "vue-router": "^3.5.3",
@@ -41,7 +43,9 @@
     "parserOptions": {
       "parser": "babel-eslint"
     },
-    "rules": {}
+    "rules": {
+      "no-unused-vars": "warn"
+    }
   },
   "browserslist": [
     "> 1%",
