--- a/app/package.json
+++ b/app/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.6.5",
     "el-table-infinite-scroll": "^1.0.10",
     "element-ui": "^2.15.6",
+    "js-file-download": "^0.4.12",
     "less": "^4.1.2",
     "less-loader": "^6.1.2",
     "nprogress": "^0.2.0",
