1st version done

--- a/app/package.json
+++ b/app/package.json
@@ -12,7 +12,10 @@
     "core-js": "^3.6.5",
     "el-table-infinite-scroll": "^1.0.10",
     "element-ui": "^2.15.6",
+    "file-saver": "^2.0.5",
+    "js-base64": "^3.7.2",
     "js-file-download": "^0.4.12",
+    "jszip": "^3.7.1",
     "less": "^4.1.2",
     "less-loader": "^6.1.2",
     "nprogress": "^0.2.0",
